--- a/app/views/tests/new.html.erb
+++ b/app/views/tests/new.html.erb
@@ -1,5 +1,15 @@
-<h1>New Test</h1>
-
+<br/>
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+    <%= link_to 'Regresar', tests_path %>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+    <h1>Agregar un examen</h1>
+    <hr/>
+  </div>
+</div>
 <%= render 'form' %>
 
-<%= link_to 'Back', tests_path %>
+
