--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,5 +20,10 @@
 @import "font-awesome";
 // Preview de imagenes
 @import "lightbox";
-
 @import 'base/epiceditor';
+
+@-moz-document url-prefix() {
+  fieldset {
+    display: table-cell;
+  }
+}
