--- a/app/views/shared/_accordion.erb
+++ b/app/views/shared/_accordion.erb
@@ -5,7 +5,7 @@
     collapse_id: id de la parte oculta del acordión.
 -%>
 
-<div class="panel panel-default">
+<div class="panel panel-default panel-accordion">
   <div class="panel-heading" role="tab" id="<%= heading_id %>">
     <h4 class="panel-title">
       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#<%= collapse_id %>" aria-expanded="<%= expand %>" aria-controls="#<%= collapse_id %>">
