--- a/app/views/tests/edit.html.erb
+++ b/app/views/tests/edit.html.erb
@@ -1,6 +1,16 @@
-<h1>Editing Test</h1>
-
+<br/>
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+    <%= link_to 'Mostrar', @test %> |
+    <%= link_to 'Regresar', tests_path %>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+    <h1>Edición del examen</h1>
+    <hr/>
+  </div>
+</div>
 <%= render 'form' %>
 
-<%= link_to 'Show', @test %> |
-<%= link_to 'Back', tests_path %>
+
