--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -210,8 +210,15 @@ p {
   margin-top: -10px;
 }
 
+// Se le da una sombra a los acordiones
 .panel-accordion {
   box-shadow: 1px 1px 2px $shadow-color;
+}
+
+// Para marcar labels con el asterizco
+label.required:after {
+  color: $alert-danger-text;
+  content: " *"
 }
 
 // Estilo para la descripccion de mensajes de error
