--- a/app/views/tests/_form.html.erb
+++ b/app/views/tests/_form.html.erb
@@ -27,30 +27,63 @@
                 <div class="col-md-8 col-lg-9">
                   <%= f.select :teacher_id, options_from_collection_for_select(@teachers, :id, :name, @test.teacher ? @test.teacher.id : nil), prompt: 'Escriba el nombre del profesor', class: 'form-control' %>
                   <!-- TODO: linkear esto con el modal para agregar un profesor -->
-                  <%= link_to 'Agregar un nuevo profesor', '#', class: 'btn btn-link btn-sm' %>
+                  <span class="pull-right"><%= link_to 'Agregar un nuevo profesor', '#', class: 'btn btn-link btn-sm' %></span>
                   <p class="text-danger" id="teacher_alert">
                     <small>Tiene que ingresar el profesor que realizó el examen.</small>
                   </p>
                 </div>
               </div>
-              <div class="field">
-                <%= f.label :semester, class: 'required' %><br>
-                <%= f.text_field :semester, class: 'form-control' %>
+              <div class="form-group">
+                <div class="col-md-4 col-lg-3">
+                  <%= f.label :semester, class: 'required' %>
+                </div>
+                <div class="col-md-8 col-lg-9">
+                  <%= f.text_field :semester, class: 'form-control' %>
+                  <p class="text-danger" id="semester_alert">
+                    <small>Tiene que ingresar el semestre en que se aplicó el examen.</small>
+                  </p>
+                </div>
               </div>
-              <div class="field">
-                <%= f.label :test_number, class: 'required' %><br>
-                <%= f.text_field :test_number, class: 'form-control' %>
+              <div class="form-group">
+                <div class="col-md-4 col-lg-3">
+                  <%= f.label :test_number, class: 'required' %>
+                </div>
+                <div class="col-md-8 col-lg-9">
+                  <%= f.text_field :test_number, class: 'form-control' %>
+                  <p class="text-danger" id="test_number_alert">
+                    <small>Tiene que ingresar el número del examen.</small>
+                  </p>
+                </div>
               </div>
-              <div class="field">
-                <%= f.label :file_url, class: 'required' %><br>
-                <%= f.file_field :file_url, class: 'filestyle', "data-iconName" => 'glyphicon glyphicon-inbox', "data-size" => 'sm', "data-buttonText" => 'Subir archivo' %>
+              <div class="form-group">
+                <div class="col-md-4 col-lg-3">
+                  <%= f.label :file_url, class: 'required' %>
+                </div>
+                <div class="col-md-8 col-lg-9">
+                  <%= f.file_field :file_url, class: 'filestyle', "data-iconName" => 'glyphicon glyphicon-inbox', "data-size" => 'sm', "data-buttonText" => 'Subir archivo' %>
+
+                </div>
               </div>
-              <div class="field">
-                <%= f.label :course_id, class: 'required' %><br>
-                <%= f.select :course_id, options_from_collection_for_select(@courses, :id, :name, @test.course ? @test.course.id : nil), prompt: 'Escriba el nombre del curso', class: 'form-control' %>
+              <div class="form-group">
+                <div class="col-md-4 col-lg-3">
+                  <%= f.label :course_id, class: 'required' %>
+                </div>
+                <div class="col-md-8 col-lg-9">
+                  <%= f.select :course_id, options_from_collection_for_select(@courses, :id, :name, @test.course ? @test.course.id : nil), prompt: 'Escriba el nombre del curso', class: 'form-control' %>
+                  <!-- TODO: linkear esto con el modal para agregar un curso -->
+                  <span class="pull-right"><%= link_to 'Agregar un nuevo curso', '#', class: 'btn btn-link btn-sm' %></span>
+                  <p class="text-danger" id="course_aler">
+                    <small>Tiene que escoger el curso al cual pertenece el examen.</small>
+                  </p>
+                </div>
               </div>
-              <div class="actions">
-                <%= f.submit %>
+              <div class="row">
+                <hr/>
+              </div>
+              <div class="col-xs-12">
+                <div class="pull-right">
+                  <%= f.submit class: 'btn btn-primary' %>
+                </div>
               </div>
           <% end %>
         </div>
