Se arregla problema con el initials: nil en los acordeones

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -54,7 +54,7 @@ $input-bg-disabled: white;
 // Panels
 $panel-border-radius: 2px;
 $panel-default-border: transparent;
-$panel-primary-border: $grey-dark;
+$panel-primary-border: white;
 $panel-primary-heading-bg: $grey-text;
 
 // Pagination
