--- a/app/views/shared/_accordion.erb
+++ b/app/views/shared/_accordion.erb
@@ -11,6 +11,7 @@
     <h4 class="panel-title">
       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#<%= collapse_id %>" aria-expanded="<%= expand %>" aria-controls="#<%= collapse_id %>">
         <%= title %>
+        <span class="pull-right"><small style="color: whitesmoke"> <%= initials.nil? ? '' : initials %></small></span>
       </a>
     </h4>
   </div>
