--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -21,9 +21,10 @@
           <% @tests.each do |course, tests| %>
               <%# Acordión para cada cursos %>
               <% title = "#{course.name}" %>
+              <% initials = "#{course.initials}" %>
               <% heading_id = "heading_#{course.name.downcase.tr(" ", "_")}" %>
               <% collapse_id = "collapse_#{course.name.downcase.tr(" ", "_")}" %>
-              <%= render layout: 'shared/accordion', locals: {title: title, heading_id: heading_id, expand: false, collapse_id: collapse_id} do %>
+              <%= render layout: 'shared/accordion', locals: {title: title, initials: initials, heading_id: heading_id, expand: false, collapse_id: collapse_id} do %>
                   <!-- TODO: refact esto para hacerlo en el modelo -->
                   <% data = tests.group_by(&:teacher) %>
                   <% data.each do |teacher, test_data| %>
