Todo bien con el pdfjs

--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -49,7 +49,7 @@
                                   <td class="center-cell"><%= romanize(data.semester) %></td>
                                   <td class="center-cell"><%= data.test_number %></td>
                                   <td class="center-cell">
-                                    <%= link_to pdfjs.full_path(file: "#{data.file_url}"), target: '_blank', alt: 'Ver archivo' do %>
+                                    <%= link_to pdfjs.full_path(file: "#{data.file_url}"), target: '_blank' do %>
                                         <i class="fa fa-file-pdf-o text-info"></i>
                                     <% end %></td>
                                   <td class="center-cell">
