--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -22,9 +22,9 @@
 
 <p>
   <strong>File url:</strong>
-  <%= link_to "Ver el documento", pdfjs.full_path(file: "#{@test.file_url}"), target: '_blank' %>
+  <%= link_to "Ver el documento", "#{@test.file_url}", target: '_blank' %>
+  <!--<%= link_to "Ver el documento", pdfjs.full_path(file: "#{@test.file_url}"), target: '_blank' %> -->
 </p>
-
 <p>
   <strong>Course:</strong>
   <%= @test.course %>
