Se agrega el panel universal y se cambia el estilo a los acordeones

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -55,7 +55,7 @@ $input-bg-disabled: white;
 $panel-border-radius: 2px;
 $panel-default-border: transparent;
 $panel-primary-border: white;
-$panel-primary-heading-bg: $grey-text;
+$panel-primary-heading-bg: white;
 
 // Pagination
 $pagination-active-bg: $primary;
