--- a/app/views/shared/_accordion.erb
+++ b/app/views/shared/_accordion.erb
@@ -8,10 +8,10 @@
 
 <div class="panel panel-primary panel-accordion">
   <div class="panel-heading" role="tab" id="<%= heading_id %>">
-    <h4 class="panel-title">
+    <h4 class="panel-title" style="color: #FF9800">
       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#<%= collapse_id %>" aria-expanded="<%= expand %>" aria-controls="#<%= collapse_id %>">
         <%= title %>
-        <span class="pull-right"><small style="color: whitesmoke"> <%= initials.nil? ? '' : initials %></small></span>
+        <span class="pull-right"><small> <%= initials.nil? ? '' : initials %></small></span>
       </a>
     </h4>
   </div>
